--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChooseSymbols"></activity>
+        <activity android:name=".SetPasswordActivity"></activity>
+        <activity android:name=".ChooseSymbols" />
         <activity android:name=".LockerActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
